plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

sourceCompatibility = 11
targetCompatibility = 11
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
application {
    mainClass = 'com.noticeditorteam.noticeditor.Main'
    applicationDefaultJvmArgs = [
        '--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED'
    ]
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['src']
        }
    }
}

dependencies{
    compile fileTree(dir: 'libs', include: '*.jar')
}

javafx {
    version = '14'
    modules = [
        'javafx.controls', 'javafx.fxml',
        'javafx.swing', 'javafx.web'
    ]
}